# ChangeLog for kde-misc/filelight
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-misc/filelight/Attic/ChangeLog,v 1.33 2009/08/26 14:59:14 armin76 Exp $

  25 Aug 2009; Raúl Porcel <armin76@gentoo.org> filelight-1.0-r1.ebuild:
  sparc stable wrt #278150

  05 Aug 2009; Jeroen Roovers <jer@gentoo.org> filelight-1.0-r1.ebuild:
  Stable for HPPA (bug #278150).

  23 Jul 2009; Samuli Suominen <ssuominen@gentoo.org>
  filelight-1.0-r1.ebuild:
  amd64 stable wrt #278150, thanks to Chad A. Simmons for testing.

  22 Jul 2009; Christian Faulhammer <fauli@gentoo.org>
  filelight-1.0-r1.ebuild:
  stable x86, bug 278150

  19 Jul 2009; nixnut <nixnut@gentoo.org> filelight-1.0-r1.ebuild:
  ppc stable #278150

*filelight-1.0-r1 (29 Jun 2008)

  29 Jun 2008; Carsten Lohrke <carlo@gentoo.org>
  +files/filelight-1.0-desktop-entry-fix.diff, +filelight-1.0-r1.ebuild:
  Merge i18n stuff, get rid of arts use flag, fix desktop entry properly.

  14 Nov 2007; Tobias Heinlein <keytoaster@gentoo.org> filelight-1.0.ebuild:
  amd64 stable, bug #194745

  06 Oct 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  filelight-1.0.ebuild:
  ppc stable, bug #194745

  05 Oct 2007; Raúl Porcel <armin76@gentoo.org> filelight-1.0.ebuild:
  sparc stable wrt #194745

  05 Oct 2007; Christian Faulhammer <opfer@gentoo.org> filelight-1.0.ebuild:
  stable x86, bug 194745

  05 Oct 2007; Jeroen Roovers <jer@gentoo.org> filelight-1.0.ebuild:
  Stable for HPPA (bug #194745).

  20 Aug 2007; Wulf C. Krueger <philantrop@gentoo.org> filelight-1.0.ebuild:
  Corrected desktop entry. Fixes bug 189551.

  24 Jun 2007; Wulf C. Krueger <philantrop@gentoo.org> filelight-1.0.ebuild:
  Added a post-install message about localisation support being available via
  kde-misc/filelight-i18n.

  23 Feb 2007; Charlie Shepherd <masterdriverz@gentoo.org>
  filelight-1.0_rc2.ebuild, filelight-1.0.ebuild: