@@ -1,6 +1,8 @@
 AUX filelight-1.0-desktop-entry-fix.diff 739 RMD160 c9c11420351a184224d500225f750ddc6257256f SHA1 36a32f5ad821e61ece6e09028ffabc6eb59b6233 SHA256 55a048d94997372916f0992ba8cd3081f10a1cb618a2589cb323bfa1c507b825
+DIST 99561-filelight-1.9-rc2.tgz 94334 RMD160 de1d6516dd68ae7d9fb88f9275d34bdba99c4304 SHA1 81d0a98770be41e41841636dd8ee9a42afb27f39 SHA256 ac1bb8b5273052d1c53c9ce824a4990fcac4fea1f42cb7b277d4a1e43fc45b19
 DIST filelight-1.0-i18n-20070422.tar.bz2 986141 RMD160 e676c7c208123b2209514d3b9406540533103715 SHA1 1f50270d851ae7578b696f1e9737be82ad06a424 SHA256 1c3b973b3dc70e08a83990a737afd15aa653029202270992940b2a23705f02fc
 DIST filelight-1.0.tar.bz2 530449 RMD160 67ce0deb03f14cc280f7471156c4f2a3135ebb5e SHA1 2a4644c598dfcc408af0af65e655e2525494708d SHA256 0743d49e60a1b2fa7b54ecdc13fb15c7a6fb144169ba272bc566a18022c245d6
 EBUILD filelight-1.0-r1.ebuild 1885 RMD160 46a315fa926cd72aa1a9f214d6568a75ae032e39 SHA1 ef0fe8e61d3f35552443bfc4847b5d844df3086f SHA256 ffc190038898e83f0d5a828f0a919736a3cb6be7b43e9b79a6ba88c3a46d1b56
-MISC ChangeLog 6151 RMD160 ebcd9f66fd4cbe20f4b3351c6e8803c16aee47ea SHA1 9110dcd0ff5a2f0aecd37c1c0ad00ddb0c8f442d SHA256 bc3b9b4df1abe5faa619fefaddc504988d2e05b4ad11514f2e6a24186ce61ffc
+EBUILD filelight-1.9_rc2.ebuild 689 RMD160 2c027d9c5d7885ff9a1a54b8d18772364d513b2b SHA1 03e5ea150c4c9585e79e955d3afc39f395a40130 SHA256 b555dbc9d18ca7eac3913c380389362214b371fef2000bcd559fa72161f9b20d
+MISC ChangeLog 6306 RMD160 9fb03cf3b55d2caef1b310746c0b9e9b0d1d6f43 SHA1 37993a438735a51eadfd797603e6328705b74a5c SHA256 5802184f6d37b159d98d0473bb72f768c57caaa56938e342a0aec4d8ad81b946
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
